# kobold-lambda-layer

./: Cargo.toml  Dockerfile  NOTICE  README.md
.github/workflows/: ci.yml
docs/: enterprise-readiness.md
lab/lambda-live/: baseline.sh  deploy-and-invoke.sh  event.json  payload.cpy
reports/: LAMBDA-LIVE-1-receipt.json  sbom.json
src/: lib.rs
